--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ta">
   <head>
     <meta charset="UTF-8" />
-    <title>பிறந்த நாள் கவிதை 💖</title>
+    <title>Happy Birthday</title>
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+Tamil&display=swap");
 
