--- a/index.html
+++ b/index.html
@@ -127,10 +127,10 @@
     </div>
 
     <div class="message">
-      இந்தா புள்ள ரேணு...😀<br />
-      உன்னோட செல்ல பெரு மானு...🤪<br />
-      உன் குரலோ ஒரு தேனு...😆<br />
-      அத கெடத்தும் நா "GONE"...🥳<br /><br /><br/>
+      Ahh pulla "RENU"...😀<br />
+      Unoda chella peru "MAANU"...🤪<br />
+      Un kuralo "THENU"...😆<br />
+      Atha ketathu na "GONE UHH"...🥳<br /><br /><br/>
       எனக்கு புகழ்ச்சி பிடிக்காது...😌<br /><br />
       <button>
         <a href="Happy birthday.html" class="no-underline">Surprice...✨</a>
